--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,12 @@
 body{
     font-family: 'Roboto', sans-serif;
 }
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+p,ul,li{
+    font-size: 14px;
+}
